SONAR-11940 Fix overlapping issue locations

--- a/server/sonar-web/src/main/js/components/common/LocationIndex.css
+++ b/server/sonar-web/src/main/js/components/common/LocationIndex.css
@@ -41,10 +41,19 @@
   background-color: var(--gray80);
 }
 
-.location-index.is-leading {
+.location-index.is-leading:first-child {
+  margin-left: 0;
+}
+
+.location-index.is-leading:not(:first-child) {
   position: absolute;
-  margin: 1px 0 0 -4px !important;
+  margin-left: -4px;
   transform: translateX(-100%);
+}
+
+.location-index.is-leading + .is-leading {
+  position: relative;
+  transform: none;
 }
 
 .location-index[tabindex] {
